--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+header {
+  border: 2px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
+header nav {
+  display: flex;
+  padding: 5px;
+  border-top: 2px solid black;
+  justify-content: center;
+}
+
+header nav a {
+  padding: 5px;
+
+}
+
+#articles-list {
+  text-align: center;
+}
+
+.article-card {
+  border: 2px solid black;
+  margin: 10px;
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 10px;
+}
+
+.article-card-author .article-card-date{
+  grid-row: 1;
+}
+
+.article-card-title {
+  grid-row: 2;
+  grid-column: 1 / 3;
+}
+
+.article-card-votes .article-card-comments {
+  grid-row: 3;
+}
