--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ header nav a {
   background-color: lightgray;
 }
 
-.article-card-author .article-card-date{
+.article-card-author, .article-card-date{
   grid-row: 1;
 }
 
@@ -56,6 +56,46 @@ header nav a {
   grid-column: 1 / 3;
 }
 
-.article-card-votes .article-card-comments {
+.article-card-votes, .article-card-comments {
   grid-row: 3;
+}
+
+#single-article {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  padding: 5px;
+  max-width: 600px;
+  margin: auto;
+}
+
+.single-article-author, .single-article-date {
+  grid-row: 1;
+}
+
+.single-article-title{
+  grid-row: 2;
+  grid-column: 1 / 3;
+  padding: 25px;
+  border: 2px solid black;
+}
+
+.single-article-img {
+  grid-row: 2;
+  grid-column: 3 / 4;
+  width: 125px;
+  height: 125px;
+}
+
+.single-article-body {
+  grid-row: 3;
+  grid-column: 1 / 4;
+  border: 2px solid black;
+  margin-top: 10px;
+  padding: 5px;
+}
+
+.single-article-votes, .single-article-comments{
+  grid-row: 4;
+  margin-top: 10px;
 }
