--- a/src/index.css
+++ b/src/index.css
@@ -63,14 +63,22 @@ header nav a {
 #single-article {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
   padding: 5px;
   max-width: 600px;
   margin: auto;
 }
 
-.single-article-author, .single-article-date {
+.single-article-author {
   grid-row: 1;
+  margin: 7px;
+}
+
+.single-article-date {
+  grid-row: 1;
+  grid-column: 2 / 4;
+  margin: 7px;
+  text-align: right;
 }
 
 .single-article-title{
@@ -95,7 +103,60 @@ header nav a {
   padding: 5px;
 }
 
-.single-article-votes, .single-article-comments{
+.single-article-votes{
+  margin: 10px;
   grid-row: 4;
+  grid-column: 1 / 2;
+  margin: 10px;
+}
+
+.single-article-comments{
+  grid-row: 4;
+  grid-column: 3 / 4;
+  margin: 10px;
+  text-align: right;
+}
+
+.show-comments-btn {
+  grid-row: 5;
+  grid-column: 2 / 3;
   margin-top: 10px;
+}
+
+.comment-card {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto auto auto;
+  border: 2px solid black;
+  margin: 10px;
+  padding: 5px;
+}
+
+.comment-author {
+  grid-row: 1;
+  grid-column: 1 / 2;
+  text-align: left;
+  border-bottom: 1px solid black;
+  margin: 5px;
+  text-align: center;
+}
+
+.comment-date {
+  grid-row: 1;
+  grid-column: 2 / 3;
+  text-align: center;
+  border-bottom: 1px solid black;
+  margin: 5px;
+}
+
+.comment-body {
+  grid-row: 2;
+  grid-column: 1 / 3;
+  margin: 10px;
+}
+
+.comment-votes {
+  grid-row: 3;
+  grid-column: 1 / 2;
+  margin: 10px;
 }
