--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+.error {
+  color: white;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  background-color: black;
+  margin: 10px;
+}
 header {
   border: 2px solid black;
   padding: 5px;
@@ -63,7 +71,7 @@ header nav a {
 #single-article {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto auto;
   padding: 5px;
   max-width: 600px;
   margin: auto;
@@ -117,8 +125,18 @@ header nav a {
   text-align: right;
 }
 
-.show-comments-btn {
+.upvote-btn {
   grid-row: 5;
+  margin: 10px;
+}
+
+.downvote-btn {
+  grid-row: 5;
+  margin: 10px;
+}
+
+.show-comments-btn {
+  grid-row: 6;
   grid-column: 2 / 3;
   margin-top: 10px;
 }
