--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ header nav a {
 
 .comment-date {
   grid-row: 1;
-  grid-column: 2 / 3;
+  grid-column: 3 / 4;
   text-align: center;
   border-bottom: 1px solid black;
   margin: 5px;
@@ -187,7 +187,7 @@ header nav a {
 
 .comment-body {
   grid-row: 2;
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   margin: 10px;
 }
 
@@ -195,4 +195,12 @@ header nav a {
   grid-row: 3;
   grid-column: 1 / 2;
   margin: 10px;
+}
+
+.delete-comment-btn {
+  grid-row: 3;
+  grid-column: 3 / 4;
+  margin: 10px;
+  background-color: red;
+  width: 100px;
 }
