--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@
   background-color: black;
   margin: 10px;
 }
+
+.success {
+  color: white;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  background-color: green;
+  margin: 10px;
+}
 header {
   border: 2px solid black;
   padding: 5px;
@@ -162,7 +171,7 @@ header nav a {
 .comment-card {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   border: 2px solid black;
   margin: 10px;
   padding: 5px;
@@ -197,10 +206,30 @@ header nav a {
   margin: 10px;
 }
 
+.disabled-btn {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
 .delete-comment-btn {
   grid-row: 3;
   grid-column: 3 / 4;
   margin: 10px;
   background-color: red;
   width: 100px;
+}
+
+.delete-in-progress {
+  grid-row: 3;
+  grid-column: 3 / 4;
+  margin: 10px;
+}
+
+.deleted-comment {
+  display: none;
+}
+
+.delete-comment-error {
+  grid-row: 4;
+  grid-column: 2 / 4;
 }
