--- a/src/index.css
+++ b/src/index.css
@@ -205,3 +205,10 @@ header nav a {
   grid-column: 1 / 2;
   margin: 10px;
 }
+
+/* @media only screen and (min-width:700px) {
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+} */
