--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,26 @@ header nav a {
   padding: 5px;
 
 }
-
+#topic-filter-bar {
+  display: flex;
+  border: 2px solid black;
+  list-style-type: none;
+  background-color: lightcyan;
+  justify-content: center;
+}
+#topic-filter-bar a {
+  text-decoration: none;
+  color: black;
+}
+.topic-card {
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid black;
+  background-color: white;
+}
+.selected-topic {
+  background-color: lightgreen;
+}
 #articles-list {
   text-align: center;
 }
