--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,28 @@ header nav a {
   padding: 5px;
 
 }
+#home h2{
+  text-align:start;
+  padding: 10px;
+  margin: 5px;
+  border: 2px solid black;
+  background-color: antiquewhite;
+}
+#home p{
+  margin: 10px;
+}
+#home button{
+  margin: 10px;
+  padding: 10px;
+  
+}
+#mystery-random-article {
+  border: 2px solid black;
+  height: 100px;
+  text-align: center;
+  padding: 60px;
+  margin: 10px;
+}
 #topic-filter-bar {
   display: flex;
   border: 2px solid black;
