--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,6 @@ header nav a {
 
 }
 #home h2{
-  text-align:start;
   padding: 10px;
   margin: 5px;
   border: 2px solid black;
@@ -50,7 +49,12 @@ header nav a {
 #home button{
   margin: 10px;
   padding: 10px;
-  
+}
+#home a{
+  text-decoration: none;
+}
+#home .article-card {
+  background-color: antiquewhite;
 }
 #mystery-random-article {
   border: 2px solid black;
@@ -58,6 +62,7 @@ header nav a {
   text-align: center;
   padding: 60px;
   margin: 10px;
+  background-color: antiquewhite;
 }
 #topic-filter-bar {
   display: flex;
