--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,11 @@
   margin: 10px;
 }
 header {
-  border: 2px solid black;
   padding: 5px;
   text-align: center;
+  box-shadow: 1px 1px 5px black;
+  margin-bottom: 10px;
+  background-color: antiquewhite;
 }
 
 header nav {
@@ -68,7 +70,6 @@ header nav a {
   display: flex;
   border: 2px solid black;
   list-style-type: none;
-  background-color: lightcyan;
   justify-content: center;
 }
 #topic-filter-bar a {
@@ -78,7 +79,7 @@ header nav a {
 .topic-card {
   margin: 10px;
   padding: 10px;
-  border: 2px solid black;
+  box-shadow: 1px 1px 5px black;
   background-color: white;
 }
 .selected-topic {
@@ -86,11 +87,13 @@ header nav a {
 }
 #sort-bar {
   margin: 10px;
-  border: 2px solid black;
+  box-shadow: 1px 1px 5px black;
 }
 .sort-button {
   margin: 5px;
   padding: 5px;
+  box-shadow: 1px 1px 5px black;
+  border: none;
 }
 .order-button {
   margin: 5px;
@@ -110,19 +113,24 @@ header nav a {
 #articles-list a {
   text-decoration: none;
 }
-
+#articles-list ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .article-card {
-  border: 2px solid black;
+  box-shadow: 1px 1px 5px black;
   margin: 10px;
   padding: 5px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   gap: 10px;
   text-decoration: none;
   color: black;
   transition-duration: 0.2s;
+  max-width: 600px;
+  background-color: antiquewhite;
 }
 
 .article-card:hover {
@@ -136,23 +144,34 @@ header nav a {
 .article-card-title {
   grid-row: 2;
   grid-column: 1 / 3;
+  place-self: center;
+}
+.article-card-img {
+  grid-row: 3;
+  grid-column: 1 / 3;
+  place-self: center;
+  width: 90%;
+  max-width: 800px;
 }
 
 .article-card-votes, .article-card-comments {
-  grid-row: 3;
+  grid-row: 4;
 }
+
+
 
 #single-article {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto;
   padding: 5px;
-  max-width: 600px;
   margin: auto;
+  place-items: center;
 }
 
 .single-article-author {
   grid-row: 1;
+  grid-column: 1 / 6;
   margin: 7px;
 }
 
@@ -165,35 +184,45 @@ header nav a {
 
 .single-article-title{
   grid-row: 2;
-  grid-column: 1 / 3;
+  grid-column: 1 / 6;
   padding: 25px;
-  border: 2px solid black;
 }
 
 .single-article-img {
-  grid-row: 2;
-  grid-column: 3 / 4;
-  width: 125px;
-  height: 125px;
+  grid-row: 3;
+  grid-column: 1 / 6;
+  max-width: 95%;
+  max-height: 95%;
 }
 
 .single-article-body {
-  grid-row: 3;
-  grid-column: 1 / 4;
-  border: 2px solid black;
-  margin-top: 10px;
+  grid-row: 4;
+  grid-column: 1 / 6;
+  margin: 10px;
   padding: 5px;
+  max-width: 600px;
 }
-
+@media only screen and (min-width:1000px) {
+  .single-article-img {
+    grid-row: 3;
+    grid-column: 1 / 3;
+    max-width: 95%;
+    max-height: 95%;
+  }
+  .single-article-body {
+    grid-row: 3;
+    grid-column: 3 / 6;
+  }
+}
 .single-article-votes{
   margin: 10px;
-  grid-row: 4;
+  grid-row: 5;
   grid-column: 1 / 2;
   margin: 10px;
 }
 
 .single-article-comments{
-  grid-row: 4;
+  grid-row: 5;
   grid-column: 3 / 4;
   margin: 10px;
   text-align: right;
@@ -237,7 +266,7 @@ header nav a {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: auto auto auto auto;
-  border: 2px solid black;
+  box-shadow: 1px 1px 5px black;
   margin: 10px;
   padding: 5px;
 }
